--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>MSYS - An modular Approach to Design and Development</title>
-    <meta name="description" content="MSYS is a">
+    <meta name="description" content="MSYS provides a powerfull API to allow users to share knowledge and expertise for a new age of design and development.">
 </head>
 <body>
     <header>
@@ -33,8 +33,10 @@
                 </p>
                 <img class="medium_size" src="images/modular.svg" alt="Modular" style="margin-top: -20px; margin-bottom: -20px;">
                 <p>
-                    The goal of MSYS is to give a standard to digitize development and design process.
-                    
+                    The goal of MSYS is to give a standard to exchange and include process based knowledge and expertise.
+                    Enabling users from all over the world to participate, by providing or include expert knowledge in there projects, a new age digitized development and design process could be started.
+                    <br>
+                    Learn below how you could use MSYS, or read about the technology behind MSYS and get inspired by the projects already done, or join our community!
                 </p>
                 
             </section>
