--- a/community.html
+++ b/community.html
@@ -24,24 +24,12 @@
                 padding-top: 10px;
                 font-size: 60px;
                 margin-bottom: 0%;
-                ">Theory</h1>
+                ">Community</h1>
             </section>
         </article>
         <article class="large_size">
             <section>
-                <h2>API</h2>
-                <p>
-                    Est itaque magnam sit aut rerum. Laudantium sed et aliquam quia officiis quidem. 
-                    Natus consequatur et qui explicabo consequatur quo ullam. 
-                    Odio voluptatem suscipit et delectus laboriosam tenetur est quod. 
-                    Eum accusantium saepe quos ipsum quas voluptatem.
-                </p>
-            </section>
-        </article>
-    
-        <article class="large_size">
-            <section>
-                <h2>Information Format</h2>
+                <h2>HTWK</h2>
                 <p>
                     Est itaque magnam sit aut rerum. Laudantium sed et aliquam quia officiis quidem. 
                     Natus consequatur et qui explicabo consequatur quo ullam. 
@@ -52,19 +40,7 @@
         </article>
         <article class="large_size">
             <section>
-                <h2>Acessiblity</h2>
-                <p>
-                    Est itaque magnam sit aut rerum. Laudantium sed et aliquam quia officiis quidem. 
-                    Natus consequatur et qui explicabo consequatur quo ullam. 
-                    Odio voluptatem suscipit et delectus laboriosam tenetur est quod. 
-                    Eum accusantium saepe quos ipsum quas voluptatem.
-                </p>
-            </section>
-        </article>
-    
-        <article class="large_size">
-            <section>
-                <h2>Publications</h2>
+                <h2>TU Dresden</h2>
                 <p>
                     Est itaque magnam sit aut rerum. Laudantium sed et aliquam quia officiis quidem. 
                     Natus consequatur et qui explicabo consequatur quo ullam. 
