--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
         </article>
         <article class="large_size">
             <section>
-                <h2>API</h2>
+                <h2>Digital Drive Shaft</h2>
                 <p>
                     Est itaque magnam sit aut rerum. Laudantium sed et aliquam quia officiis quidem. 
                     Natus consequatur et qui explicabo consequatur quo ullam. 
@@ -41,7 +41,7 @@
     
         <article class="large_size">
             <section>
-                <h2>Information Format</h2>
+                <h2>Structural Battery</h2>
                 <p>
                     Est itaque magnam sit aut rerum. Laudantium sed et aliquam quia officiis quidem. 
                     Natus consequatur et qui explicabo consequatur quo ullam. 
@@ -52,19 +52,7 @@
         </article>
         <article class="large_size">
             <section>
-                <h2>Acessiblity</h2>
-                <p>
-                    Est itaque magnam sit aut rerum. Laudantium sed et aliquam quia officiis quidem. 
-                    Natus consequatur et qui explicabo consequatur quo ullam. 
-                    Odio voluptatem suscipit et delectus laboriosam tenetur est quod. 
-                    Eum accusantium saepe quos ipsum quas voluptatem.
-                </p>
-            </section>
-        </article>
-    
-        <article class="large_size">
-            <section>
-                <h2>Publications</h2>
+                <h2>Supercaps</h2>
                 <p>
                     Est itaque magnam sit aut rerum. Laudantium sed et aliquam quia officiis quidem. 
                     Natus consequatur et qui explicabo consequatur quo ullam. 
