--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,8 +13,8 @@
         <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="theory.html">THEORY</a></li>
-            <li><a href="#">PROJECTS</a></li>
-            <li><a href="#">COMMUNITY</a></li>
+            <li><a href="projects.html">PROJECTS</a></li>
+            <li><a href="community.html">COMMUNITY</a></li>
         </ul>
     </header>
     <main>
@@ -61,7 +60,7 @@
                </div>
             </section>
         </article>
-
+    
         <article class="large_size">
             <section>
                 <h2>Manufactures</h2>
@@ -91,7 +90,7 @@
                 <img class="medium_size" src="images/simulation.svg" alt="Simulation" style="margin-top: -0px; margin-bottom: -0px;">
             </section>
         </article>
-
+    
         <article class="large_size">
             <section>
                 <h2>Investors</h2>
